src/core-crm/objects/Consultancy__c/Consultancy__c.object-meta.xml
<CustomObject>
    <label>Consultancy</label>
    <nameField>
        <label>Consultancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>