src/core-crm/objects/Consultancy__c/fields/Definition_of_Problem__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Problem__c</fullName>
    <label>Definition of Problem</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>