src/core-crm/objects/Consultancy__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Consultancy End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>