src/core-crm/objects/Consultancy__c/fields/Investigation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Summary__c</fullName>
    <label>Investigation Summary</label>
    <type>TextArea</type>
</CustomField>