src/core-crm/objects/Consultancy__c/fields/Mark_Activity_as_Complete__c.field-meta.xml
<CustomField>
    <fullName>Mark_Activity_as_Complete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mark Activity as Complete</label>
    <type>Checkbox</type>
</CustomField>