src/core-crm/objects/Consultancy__c/fields/Mark_Investigation_as_Complete__c.field-meta.xml
<CustomField>
    <fullName>Mark_Investigation_as_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Save the report to files</inlineHelpText>
    <label>Mark Investigation as Complete</label>
    <type>Checkbox</type>
</CustomField>