src/core-crm/objects/Consultancy__c/fields/Product_Request__c.field-meta.xml
<CustomField>
    <fullName>Product_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Request</label>
    <referenceTo>Product_Request__c</referenceTo>
    <relationshipLabel>Consultancies</relationshipLabel>
    <relationshipName>Consultancies</relationshipName>
    <type>Lookup</type>
</CustomField>