src/core-crm/objects/Consultancy__c/fields/Publish_to_the_Portal__c.field-meta.xml
<CustomField>
    <fullName>Publish_to_the_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to automatically publish the report on the Corporate Portal which will be visible to the Customer Admin User.</inlineHelpText>
    <label>Publish to the Portal</label>
    <type>Checkbox</type>
</CustomField>