src/core-crm/objects/Consultancy__c/validationRules/Activity_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Product_Request__r.Product_Request_Status__c , &apos;Design&apos;),
 !Mark_Activity_as_Complete__c,
 Mark_Design_Stage_as_Complete__c
)</errorConditionFormula>
    <errorDisplayField>Mark_Design_Stage_as_Complete__c</errorDisplayField>
    <errorMessage>Please add at least one activity in the Activity Section before proceeding.</errorMessage>
</ValidationRule>