src/core-crm/objects/Consultancy__c/validationRules/Definition_of_Problem_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Definition_of_Problem_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Product_Request__r.Product_Request_Status__c , &apos;Design&apos;),
 OR(
  ISBLANK( Definition_of_Problem__c ),
  ISCHANGED( Definition_of_Problem__c )
 ),
 LEN( Definition_of_Problem__c) &lt; 20,
 Mark_Design_Stage_as_Complete__c 
)</errorConditionFormula>
    <errorDisplayField>Definition_of_Problem__c</errorDisplayField>
    <errorMessage>Must have at least 20 characters</errorMessage>
</ValidationRule>