src/core-crm/objects/Consultancy__c/validationRules/End_Date_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Product_Request__r.Product_Request_Status__c , &apos;Design&apos;),
 ISBLANK(End_Date__c ),
 Mark_Design_Stage_as_Complete__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date is required to update the Product Request Status.</errorMessage>
</ValidationRule>