src/core-crm/objects/Consultancy__c/validationRules/End_date_must_be_greater_than_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_must_be_greater_than_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 ISPICKVAL( Product_Request__r.Product_Request_Status__c  , &apos;Design&apos;),
 Start_Date__c &gt;  End_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be greater than Start Date</errorMessage>
</ValidationRule>