src/core-crm/objects/Consultancy__c/validationRules/Investigation_Summary_min_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Investigation_Summary_min_length</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 OR(
  NOT (ISBLANK ( Investigation_Summary__c ) ),
  ISCHANGED( Investigation_Summary__c )
 ),
  LEN( Investigation_Summary__c ) &lt; 20
)</errorConditionFormula>
    <errorDisplayField>Investigation_Summary__c</errorDisplayField>
    <errorMessage>Must have at least 20 characters</errorMessage>
</ValidationRule>